2010-08-30  Ethan A Merritt  <merritt@u.washington.edu>

	* src/show.c (conv_text):
	Until now, the "show" and "save" commands have replaced all non-ascii
	characters with a byte-by-byte octal escape sequence.  This makes any
	labels, variables, titles, etc not human-readable if they contain UTF8
	encoded characters. Now we simply pass them through as-is if the current
	encoding is UTF-8. I think this is the correct thing to do for other
	8-bit encodings as well, but I can't test those easily.

2010-08-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (eval_plots):  Allow "fc <colorspec>" as an in-line
	option to the plot command for plot styles that use a fill.

2010-08-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c:  The gnuplot_x11 side of Shige's fix.

2010-08-14  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/x11.trm:  The last font used inside an enhanced text string was
	not being cleared on exit.

2010-08-13  Ethan A Merritt  <merritt@u.washington.edu>

	* src/ansichek.h src/gplt_x11.c src/plot.c src/readline.c src/show.c
	src/stdfn.h src/syscfg.h term/x11.trm:  Remove conditional code for 
	another obsolete platform (OSK/OS9, used for example on TRS-80).

2010-08-12  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c:  OSX history command could segfault if there was no
	previous history file.

	* docs/gnuplot.doc:  Reorganize documentation for binary files.

2010-08-09  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in src/plot.c: More work to enable autoconfigue on OSX.

2010-08-08  Olivier Mehani  <shtrom@users.sourceforge.net>

	* src/util.c docs/gnuplot.doc:  Add ISO-IEC-80000 prefixes
	(ki Mi Gi etc) as gprintf format specifiers %b and %B, which are
	respectively the mantissa and exponent.  Also fix an out-of-range
	formatting bug.

2010-08-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c: Do not create a data record for a blank line at the end
	of the input stream.
	Bugfix.
